+ disable some TSLint rules

--- a/templates/class.mustache
+++ b/templates/class.mustache
@@ -1,3 +1,5 @@
+// tslint:disable:max-classes-per-file max-file-line-count ban-comma-operator quotemark
+
 {{#imports}}
 /// <reference path="{{&.}}" />
 {{/imports}}
